--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
   <li>Tea</li>
   <li>Milk</li>
 </ul>  
+<h2>Cars List</h2>
 
+<ul>
+  <li>BMW</li>
+  <li>Benz</li>
+  <li>TATA</li>
+</ul>  
+ 
  
 
 </body>
